# edu-profit

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  MVP_IMPLEMENTATION_PLAN.md  Makefile  README.md  TEST_PLAN.md  TODOS.md  deploy.sh  docker-compose.production.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  bootstrap.py  config.py  db.py  main.py  models.py  services.py  storage.py
app/static/: app.css
app/templates/: base.html  dashboard.html  login.html  payment_confirm.html  payment_detail.html  refund_confirm.html  student_detail.html  students.html
tests/: conftest.py
tests/integration/: test_web.py
tests/unit/: test_services.py
